added another heading with github buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
         <a href="/" class="navbar-item">
           Home
         </a>
-        <a href="/" class="navbar-item">
+        <a href="/templates/how-to-contribute.html" class="navbar-item">
           How to contribute
         </a>
         <a href="/contributors" class="navbar-item">
