--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,56 @@
     .grid-container.grid-repeat-5 {
       grid-template-columns: repeat(5, 1fr);
     }
+
+    body {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+    .main-main {
+      width: 80%;
+      margin: 3rem auto;
+      padding: 3rem auto;
+    }
+
+    hr {
+      border: 0;
+      height: 1px;
+      background: #333;
+      background-image: linnear-gradiet(to right, #ccc, #333, #ccc);
+      margin-top: 12px;
+      margin-bottom: 16px;
+    }
+
+    a {
+      color: #e4376d;
+    }
+
+    .imp {
+      border: none;
+      margin: 0;
+      padding: 0% 0.3%;
+      width: auto;
+      overflow: visible;
+      font-family: "Roboto Mono", monospace;
+      font-weight: 500;
+      background-color: #e5e5e5;
+      border-radius: 5px;
+      color: inherit;
+      line-height: normal;
+    }
+
+    pre {
+      padding: 10px 10px 10px 25px;
+    }
+
+    .header-1,
+    .header-2 {
+      margin-bottom: 24px;
+    }
+
+    .header-2 {
+      margin-top: 24px;
+    }
   </style>
   <script src="https://unpkg.com/htmx.org@1.8.4"></script>
 </head>
@@ -71,7 +121,7 @@
         <a href="/" class="navbar-item">
           Home
         </a>
-        <a href="/templates/how-to-contribute.html" class="navbar-item">
+        <a href="/how-to-contribute" class="navbar-item">
           How to contribute
         </a>
         <a href="/contributors" class="navbar-item">
@@ -129,6 +179,7 @@
 
     gtag('config', 'G-QLB0N16RL5');
   </script>
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
