--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
         <a href="/" class="navbar-item">
           Home
         </a>
-        <a href="/templates/how-to-contribute.html" class="navbar-item">
+        <a href="/how-to-contribute" class="navbar-item">
           How to contribute
         </a>
         <a href="/contributors" class="navbar-item">
@@ -104,6 +104,7 @@
 
     gtag('config', 'G-QLB0N16RL5');
   </script>
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
 </html>
