--- a/templates/how-to-contribute.html
+++ b/templates/how-to-contribute.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -121,7 +121,13 @@
           </div>
         </div>
       </div>
-    </nav>
+    </nav> -->
+
+
+
+{% extends 'base.html' %}
+{% block content %}
+
     <div class="main-main">
       <div
         class="header-1 is-flex is-align-items-center is-justify-content-space-between"
@@ -346,7 +352,9 @@
         <a href="https://bulma.io">Bulma</a> as frontend.
       </p>
     </div>
-    <footer class="footer">
+
+    {% endblock content %}
+    <!-- <footer class="footer">
       <div class="content has-text-centered">
         <p class="subtitle-5">
           <strong>Saadhan</strong> by
@@ -362,4 +370,4 @@
       </div>
     </footer>
   </body>
-</html>
+</html> -->
