Removed the commented out code

--- a/templates/how-to-contribute.html
+++ b/templates/how-to-contribute.html
@@ -1,130 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500&family=Roboto+Mono:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="https://raw.githubusercontent.com/developersIndia/assets/main/favicons/favicon.ico"
-    />
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <title>How to Contribute</title>
-
-    <style>
-      @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
-
-      body {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      }
-
-      .main-main {
-        width: 80%;
-        margin: 3rem auto;
-        padding: 3rem auto;
-      }
-
-      hr {
-        border: 0;
-        height: 1px;
-        background: #333;
-        background-image: linnear-gradiet(to right, #ccc, #333, #ccc);
-        margin-top: 12px;
-        margin-bottom: 16px;
-      }
-
-      a {
-        color: #e4376d;
-      }
-
-      .imp {
-        border: none;
-        margin: 0;
-        padding: 0% 0.3%;
-        width: auto;
-        overflow: visible;
-        font-family: "Roboto Mono", monospace;
-        font-weight: 500;
-        background-color: #e5e5e5;
-        border-radius: 5px;
-        color: inherit;
-        line-height: normal;
-      }
-
-      pre {
-        padding: 10px 10px 10px 25px;
-      }
-
-      .header-1,
-      .header-2 {
-        margin-bottom: 24px;
-      }
-
-      .header-2 {
-        margin-top: 24px;
-      }
-    </style>
-  </head>
-
-  <body>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <a
-          role="button"
-          class="navbar-burger"
-          aria-label="menu"
-          aria-expanded="false"
-          data-target="navbarBasicExample"
-        >
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
-      </div>
-      <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
-          <a href="/" class="navbar-item"> Home </a>
-          <a href="/templates/how-to-contribute.html" class="navbar-item">
-            How to contribute
-          </a>
-          <a href="/contributors" class="navbar-item"> Contributors </a>
-          <a href="https://wiki.developersindia.in/" class="navbar-item">
-            Wiki
-          </a>
-        </div>
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="buttons">
-              <a
-                style="background-color: #e4376d"
-                href="https://reddit.com/r/developersIndia"
-                class="button is-primary"
-              >
-                <strong>Join Us</strong>
-              </a>
-              <a href="https://discord.gg/MKXMSNC" class="button is-light">
-                Chat
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </nav> -->
-
-
-
 {% extends 'base.html' %}
 {% block content %}
 
@@ -135,7 +8,7 @@
         <h1 class="title is-2" style="margin-bottom: 0px">
           Contribute to developersIndia resources
         </h1>
-        <div class="">
+        <div class="">Removed the commented out code
           <a
             class="github-button"
             href="https://github.com/developersIndia/resources/fork"
@@ -353,21 +226,4 @@
       </p>
     </div>
 
-    {% endblock content %}
-    <!-- <footer class="footer">
-      <div class="content has-text-centered">
-        <p class="subtitle-5">
-          <strong>Saadhan</strong> by
-          <a href="https://developersindia.in/">r/developersIndia</a>. The
-          source code is licensed
-          <a href="https://github.com/developersIndia/saadhan/blob/main/LICENSE"
-            >GPL v3.0</a
-          >. The website content is licensed
-          <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
-            >CC BY NC SA 4.0</a
-          >.
-        </p>
-      </div>
-    </footer>
-  </body>
-</html> -->
+{% endblock content %}
