--- a/templates/how-to-contribute.html
+++ b/templates/how-to-contribute.html
@@ -8,7 +8,7 @@
         <h1 class="title is-2" style="margin-bottom: 0px">
           Contribute to developersIndia resources
         </h1>
-        <div class="">Removed the commented out code
+        <div class="">
           <a
             class="github-button"
             href="https://github.com/developersIndia/resources/fork"
