💄 replace developersindia domain name + svg favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
   <link rel="canonical" href="{{ url_for(request.endpoint, _external=True) }}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
   <link rel="icon" type="image/x-icon"
-    href="https://raw.githubusercontent.com/developersIndia/assets/main/favicons/favicon.ico">
+    href="https://raw.githubusercontent.com/developersIndia/assets/main/logo.svg">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}">
   <script src="https://unpkg.com/htmx.org@1.8.4"></script>
 </head>
