--- a/templates/resources.html
+++ b/templates/resources.html
@@ -52,7 +52,7 @@
                 <footer class="card-footer">
                     <a href={{res.url}} class="card-footer-item" rel="noreferrer noopener" target="_blank">Open Link</a>
                     <a target="_blank"
-                        href="http://twitter.com/share?text=Hey, checkout this resource {{res.title}} via saadhan.devsindia.in&url={{res.url}}&hashtags=devsindia"
+                        href="http://twitter.com/share?text=Hey, checkout this resource {{res.title}} via saadhan.developersindia.in&url={{res.url}}&hashtags=developersindia"
                         class="card-footer-item">Tweet</a>
                 </footer>
             </div>
