add support for java, operating-systems and linux resources

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,9 @@
 	<meta name="twitter:site" content="@devsinindia">
 	<meta name="twitter:creator" content="@devsinindia">
 	<meta property="og:site_name" content="Saadhan - A resource hub by r/developersIndia">
-  <meta name="description" content="Saadhan is a comprehensive website created by the r/developersIndia community, which offers an extensive collection of resources to help you learn tech. Whether you are a beginner or an experienced professional, Saadhan has something for everyone. From articles and tutorials to videos and courses, you can find a wide range of tech-related content that will enhance your knowledge and skills.">
-	<meta property="og:description" content="Saadhan is a comprehensive website created by the r/developersIndia community, which offers an extensive collection of resources to help you learn tech. Whether you are a beginner or an experienced professional, Saadhan has something for everyone. From articles and tutorials to videos and courses, you can find a wide range of tech-related content that will enhance your knowledge and skills." />
-	<meta name="twitter:description" content="Saadhan is a comprehensive website created by the r/developersIndia community, which offers an extensive collection of resources to help you learn tech. Whether you are a beginner or an experienced professional, Saadhan has something for everyone. From articles and tutorials to videos and courses, you can find a wide range of tech-related content that will enhance your knowledge and skills.">
+  <meta name="description" content="Saadhan is a resource hub for the r/developersIndia community, which offers an extensive collection of tech resources. Whether you are a beginner or an experienced professional, Saadhan has something for everyone.">
+	<meta property="og:description" content="Saadhan is a resource hub for the r/developersIndia community, which offers an extensive collection of tech resources. Whether you are a beginner or an experienced professional, Saadhan has something for everyone." />
+	<meta name="twitter:description" content="Saadhan is a resource hub for the r/developersIndia community, which offers an extensive collection of tech resources. Whether you are a beginner or an experienced professional, Saadhan has something for everyone.">
   <meta name="google-site-verification" content="jeqscIfDl_A3eUsQzbMRqd74G3WaI1GHVaV3DHkDD4A" />
 
   <title>{{ title }}</title>
@@ -30,9 +30,6 @@
 <body>
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <!-- <a class="navbar-item" href="https://bulma.io">
-        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-      </a> -->
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
         <span aria-hidden="true"></span>
