--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
   </nav>
   <main>
     <div class="content is-vcentered has-text-centered">
-      <h1 class="title is-2 is-center">saadhan - resource hub by <a
+      <h1 class="title is-2 is-center"><a href="/">saadhan</a> - resource hub by <a
           href="https://reddit.com/r/developersIndia">r/developersIndia</a></h1>
     </div>
 
