--- a/templates/filtered_resources.html
+++ b/templates/filtered_resources.html
@@ -1,4 +1,4 @@
-{% if resources|length > 1 %}
+{% if resources|length >= 1 %}
 {% for res in resources %}
 <div class="card">
     <div class="card-content">
@@ -6,7 +6,7 @@
             <p class="title is-4">{{res.title}}</p>
         </div>
         <span class="tag is-danger">{{res.level}}</span>
-        <span class="tag is-danger">{{res.type}}</span>
+        <span class="tag is-info">{{res.type}}</span>
         <footer class="card-footer">
             <a href={{res.url}} class="card-footer-item" rel="noreferrer noopener" target="_blank">Open Link</a>
             <a target="_blank"
